--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
+    <title>Feedback Taker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 
     <form action="/formPost" class="form" method="post">
 
-        <h1 class="heading">HTML Form</h1>
+        <h1 class="heading">Feedback Form</h1>
         <input type="text" name="username" placeholder="username" required>
 
         <input type="password" name="password" placeholder="Password" required>
