--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,12 @@
           required
         /> -->
         <select name="rating" id="rating">
-            <option value="1">1 - Very Dissatisfied</option>
-            <option value="2">2 - Dissatisfied</option>
-            <option value="3">3 - Neutral</option>
-            <option value="4">4 - Satisfied</option>
+            <option value="" disabled selected>Select an option</option>
             <option value="5">5 - Very Satisfied</option>
+            <option value="4">4 - Satisfied</option>
+            <option value="3">3 - Neutral</option>
+            <option value="2">2 - Dissatisfied</option>
+            <option value="1">1 - Very Dissatisfied</option>
         </select>
       </div>
 
