--- a/public/index.html
+++ b/public/index.html
@@ -228,7 +228,7 @@
         alert("Feedback submitted successfully!");
       }
     </script>
-    <script async='async' src='//code.tidio.co/dq699ks0spspilmp7wdqu4lxjqdhy7xk.js'/>
+    <script async='async' src='//code.tidio.co/dq699ks0spspilmp7wdqu4lxjqdhy7xk.js'></script>
   </body>
 </html> 
 
